--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: CI/CD
 
 on: [push]
 
@@ -16,3 +16,7 @@ jobs:
         run: pnpm install
       - name: Run tests
         run: pnpm run test
+      - name: Run lint
+        run: pnpm run lint
+      - name: Run build
+        run: pnpm run build
