--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -37,10 +37,10 @@ jobs:
       - name: Configure changelog
         if: steps.publish.outputs.type != "none"
         run: |
-          echo '{"categories": [], "template": "## Commits:\n\n${{ '${{UNCATEGORIZED}}' }}", "pr_template": ${{ '"- ${{MERGE_SHA}} ${{TITLE}}"' }}}' > changelog_config.json
+          echo '{"categories": [], "template": "## Commits:\n\n${{ '${{UNCATEGORIZED}}' }}", "pr_template": ${{ '"- ${{MERGE_SHA}} ${{TITLE}}"' }} }' > changelog_config.json
           cat changelog_config.json
-          echo "last_tag=${{git describe --tags --abbrev=0}}" >> $GITHUB_ENV
-          echo "curr_commit=${{git rev-parse HEAD}}" >> $GITHUB_ENV
+          echo "last_tag=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
+          echo "curr_commit=$(git rev-parse HEAD)" >> $GITHUB_ENV
       - name: Generate changelog
         if: steps.publish.outputs.type != "none"
         id: github_release
