--- a/.github/workflows/install/action.yaml
+++ b/.github/workflows/install/action.yaml
@@ -5,6 +5,8 @@ runs:
   steps:
     - name: Setup pnpm
       uses: pnpm/action-setup@v2
+      with:
+        version: latest
 
     - name: Use Node.js 18
       uses: actions/setup-node@v3
