--- a/package.json
+++ b/package.json
@@ -45,7 +45,9 @@
   "scripts": {
     "clean": "rimraf dist",
     "test": "vitest run",
-    "lint": "eslint . --ext .ts",
+    "lint:ci": "eslint . --ext .ts",
+    "format:ci": "prettier --check src",
+    "typecheck": "tsc --noEmit",
     "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "preview": "serve",
     "prepublishOnly": "npm run build"
