--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,36 +13,43 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+
       - name: Install
         uses: ./.github/workflows/install
+
       - name: Build
         run: |
           pnpm run clean
           pnpm run build
+
       - id: publish
         name: Publish to NPM
         uses: JS-DevTools/npm-publish@v1
         with:
           token: ${{ secrets.NPM_TOKEN }}
           dry-run: false
+
       - name: Post publish
-        if: steps.publish.outputs.type != "none"
+        if: steps.publish.outputs.type != 'none'
         run: |
           echo "Published ${{ steps.publish.outputs.type }} version: ${{ steps.publish.outputs.version }}"
+
       - name: Publish skipped
-        if: steps.publish.outputs.type == "none"
+        if: steps.publish.outputs.type == 'none'
         run: |
           echo "Version in package.json has not changed. Skipping"
           exit 0
+
       - name: Configure changelog
-        if: steps.publish.outputs.type != "none"
+        if: steps.publish.outputs.type != 'none'
         run: |
           echo '{"categories": [], "template": "## Commits:\n\n${{ '${{UNCATEGORIZED}}' }}", "pr_template": ${{ '"- ${{MERGE_SHA}} ${{TITLE}}"' }} }' > changelog_config.json
           cat changelog_config.json
           echo "last_tag=$(git describe --tags --abbrev=0)" >> $GITHUB_ENV
           echo "curr_commit=$(git rev-parse HEAD)" >> $GITHUB_ENV
+
       - name: Generate changelog
-        if: steps.publish.outputs.type != "none"
+        if: steps.publish.outputs.type != 'none'
         id: github_release
         uses: mikepenz/release-changelog-builder-action@v2.9.0
         env:
@@ -52,8 +59,9 @@ jobs:
           toTag: ${{ github.ref }}
           commitMode: true
           configuration: changelog_config.json
+
       - name: Create release
-        if: steps.publish.outputs.type != "none"
+        if: steps.publish.outputs.type != 'none'
         id: create_release
         uses: actions/create-release@latest
         env:
