fix create changelog script

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -17,6 +17,13 @@ jobs:
       - name: Install
         uses: ./.github/workflows/install
 
+      - name: CI
+        run: |
+          pnpm run lint:ci
+          pnpm run format:ci
+          pnpm run typecheck
+          pnpm run test
+
       - name: Build
         run: |
           pnpm run clean
@@ -67,8 +74,9 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ steps.publish.outputs.version }}
-          release_name: ${{ steps.publish.outputs.version }}
-          body: ${{ steps.github_release.outputs.changelog }}
+          tag_name: v${{ steps.publish.outputs.version }}
+          release_name: v${{ steps.publish.outputs.version }}
+          commitish: ${{ github.ref }}
+          body: ${{steps.github_release.outputs.changelog}}
           draft: false
           prerelease: false
