--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
   "scripts": {
     "clean": "rimraf dist",
     "test": "vitest run",
-    "lint:ci": "eslint . --ext .ts",
+    "lint:ci": "eslint . --ext .ts --cache",
     "format:ci": "prettier --check src",
     "typecheck": "tsc --noEmit",
     "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
     "preview": "serve",
-    "prepublishOnly": "npm run build"
+    "publish-ci": "tsx scripts/publish-ci.ts"
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.1",
@@ -64,8 +64,10 @@
     "rollup-plugin-terser": "^7.0.2",
     "serve": "^14.2.0",
     "tsup": "^7.1.0",
+    "tsx": "^4.19.1",
     "typescript": "^5.1.3",
-    "vitest": "^0.32.2"
+    "vitest": "^0.32.2",
+    "zx": "^8.1.9"
   },
   "prettier": "@tknf-labs/prettier-config",
   "eslintConfig": {
