--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "@tknf-labs/read-files",
-  "version": "1.1.1",
+  "type": "module",
+  "version": "1.2.0",
   "license": "MIT",
   "description": "Utility for async use of FileReader API on browser",
   "author": "TKNF LLC <dev@tknf.net>",
@@ -48,25 +49,25 @@
     "lint:ci": "eslint . --ext .ts --cache",
     "format:ci": "prettier --check src",
     "typecheck": "tsc --noEmit",
-    "build": "rollup -c rollup.config.ts --configPlugin @rollup/plugin-typescript",
+    "build": "rollup -c rollup.config.ts --configPlugin typescript",
     "preview": "serve",
     "publish-ci": "tsx scripts/publish-ci.ts"
   },
   "devDependencies": {
-    "@rollup/plugin-typescript": "^11.1.1",
+    "@rollup/plugin-terser": "^0.4.4",
+    "@rollup/plugin-typescript": "^12.1.0",
     "@tknf-labs/eslint-config": "^2.1.0",
     "@tknf-labs/prettier-config": "^2.1.0",
-    "eslint": "^8.43.0",
+    "eslint": "^8.57.1",
     "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
     "rimraf": "^5.0.1",
-    "rollup": "^3.25.1",
-    "rollup-plugin-terser": "^7.0.2",
+    "rollup": "^4.24.0",
     "serve": "^14.2.0",
     "tsup": "^7.1.0",
     "tsx": "^4.19.1",
-    "typescript": "^5.1.3",
-    "vitest": "^0.32.2",
+    "typescript": "^5.6.3",
+    "vitest": "^2.1.2",
     "zx": "^8.1.9"
   },
   "prettier": "@tknf-labs/prettier-config",
