--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
   "scripts": {
     "clean": "rimraf dist",
     "test": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:watch:coverage": "vitest --coverage",
     "lint:ci": "eslint . --ext .ts --cache",
     "format:ci": "prettier --check src",
     "typecheck": "tsc --noEmit",
@@ -58,6 +60,7 @@
     "@rollup/plugin-typescript": "^12.1.0",
     "@tknf-labs/eslint-config": "^2.1.0",
     "@tknf-labs/prettier-config": "^2.1.0",
+    "@vitest/coverage-istanbul": "2.1.2",
     "eslint": "^8.57.1",
     "jsdom": "^22.1.0",
     "prettier": "^2.8.8",
