--- a/.editorconfig
+++ b/.editorconfig
@@ -1,12 +1,16 @@
 root = true
 
 [*]
-charset = utf-8
 end_of_line = lf
+charset = utf-8
 indent_size = 2
-indent_style = space
+indent_style = tab
 insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.md]
+indent_style = space
 trim_trailing_whitespace = false
+
+[*.yaml]
+indent_style = space
