--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-# Logs
+dist/
+sandbox/
+
+# Cloudflare Workers
+.wrangler
+
+# logs
 logs
 *.log
 npm-debug.log*
@@ -89,7 +95,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -103,9 +108,6 @@ dist
 # vuepress v2.x temp and cache directory
 .temp
 .cache
-
-# Docusaurus cache and generated files
-.docusaurus
 
 # Serverless directories
 .serverless/
@@ -129,4 +131,15 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
+# IDE-specific settings
+.idea
+
+# Claude Code local files
+CLAUDE.local.md
+settings.local.json
+
+
+# MacOS-specific files
 .DS_Store
+
+tmp/
